# currency-bot

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  build.rs  currency-bot.service
.github/workflows/: ci.yml  deploy.yml  release.yml
githooks/: pre-commit
src/: domain.rs  main.rs
src/bot_modules/: echo.rs  help.rs  mod.rs  newline.rs  price.rs  subscribers.rs
src/modules/: echo.rs  mod.rs  scheduler.rs  start.rs  subscribers.rs
src/price_service/: mod.rs  provider.rs  service.rs
src/price_service/providers/: mod.rs  newline_provider.rs
