[package]
name = "currency-bot"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[lints.rust]
unused = "deny"

[dependencies]
pretty_env_logger = "0.5"
log = "0.4"
teloxide = "0.17"
tokio   = { version = "1", features = ["rt-multi-thread", "macros"] }
dotenvy = "0.15"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
